# libconveyor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  commit_message.txt  journal.md  observability_section.md
benchmark/: conveyor_benchmark.cpp
include/libconveyor/: conveyor.h  conveyor_modern.hpp
include/libconveyor/detail/: ring_buffer.h
src/: conveyor.cpp
test/: CMakeLists.txt  conveyor_consistency_test.cpp  conveyor_modern_test.cpp  conveyor_partial_io_test.cpp  conveyor_test.cpp
